Fix #6251 and document power transfer more
 - Fix several issues I created by not properly implementing transfer limits
     - Ensure our limits are bounded by the amount a source can transfer
     - This keeps one connector from hogging more bandwidth than it should
     - One HV connector would previously saturate a transformer with 8 MV connectors, as each MV connector would "transfer" 1024 from it
     - Now, one HV connector can only provide 4096IF max per cycle, etc.
 - Document power transfer more to make it intelligible for future devs
 - May need more documentation in the future